infra/google-cloud-platform/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simply-the-quest
  labels:
    app: simply-the-quest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simply-the-quest
  template:
    metadata:
      labels:
        app: simply-the-quest
    spec:
      serviceAccountName: simply-the-quest-hasura-k8s
      containers:
        - name: hasura
          image: hasura/graphql-engine:v2.6.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-log_debug_stdout"
            - "-instances=simply-the-quest:europe-west1:postgres=tcp:5432"
          # [START cloudsql_security_context]
          securityContext:
            runAsNonRoot: true
          # [END cloudsql_security_context]
          # Resource configuration depends on an application's requirements. You
          # should adjust the following values based on what your application
          # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          #resources:
            #requests:
              # The proxy's memory use scales linearly with the number of active
              # connections. Fewer open connections will use less memory. Adjust
              # this value based on your application's requirements.
              #memory: "2Gi"
              # The proxy's CPU use scales linearly with the amount of IO between
              # the database and the application. Adjust this value based on your
              # application's requirements.
              #cpu:    "1"
        # [END proxy_container]
