infra/google-cloud-platform/nodeport.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "simply-the-quest-nodeport"
  labels:
    app: "simply-the-quest"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "simply-the-quest"
  type: "NodePort"
