infra/google-cloud-platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simply-the-quest-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: simply-the-quest
    networking.gke.io/managed-certificates: simply-the-quest-cert
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: simply-the-quest-nodeport
      port:
        number: 80
